<resources>
    <string name="app_name">ComPedo</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Your Email</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password</string>
    <string name="username">Username</string>
    <string name="main_btn_start">Start Pedometer </string>
    <string name="main_sign_out">Sign Out</string>
    <string name="main_btn_stop">Stop Pedometer</string>
    <string name="main_welcome">Welcome !</string>
    <string name="main_highscore">Your Highscore is:</string>
</resources>

